--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="new_collection-img-container">
           <!-- 1 -->
       <div class="image">
-        <img src="image/fp/belt.png" />
+        <img src="image/belt.png" />
         <div class="image-type">
           <div class="type-new"><h1>NEW</h1></div>
           <div class="type-sale"><h1>SALE</h1></div>
@@ -239,7 +239,7 @@
     
           <!-- 2 -->
       <div class="image">
-        <img src="image/fp/carrybag.png" />
+        <img src="image/carrybag.png" />
         <div class="image-type">
           <div class="type-new"><h1>NEW</h1></div>
         </div>
@@ -260,7 +260,7 @@
       </div>
           <!-- 3 -->
       <div class="image">
-        <img src="image/fp/glasses.png" />
+        <img src="image/glasses.png" />
         <div class="image-type">
           <div class="type-new"><h1>NEW</h1></div>
           <div class="type-sale"><h1>SALE</h1></div>
@@ -282,7 +282,7 @@
       </div>
           <!-- 4 -->
       <div class="image">
-        <img src="image/fp/handbag.png" />
+        <img src="image/handbag.png" />
         <div class="image-type">
           <div class="type-sale"><h1>SALE</h1></div>
         </div>
@@ -305,7 +305,7 @@
       <div class="new_collection-img-container">
           <!-- 1 -->
       <div class="image">
-        <img src="image/fp/hat.png" />
+        <img src="image/hat.png" />
         <div class="image-type">
           <div class="type-sale"><h1>SALE</h1></div>
         </div>
@@ -327,7 +327,7 @@
     
           <!-- 2 -->
       <div class="image">
-        <img src="/mage/fp/heels.png" />
+        <img src="mage/heels.png" />
         <div class="image-type">
           <div class="type-new"><h1>NEW</h1></div>
           <div class="type-sale"><h1>SALE</h1></div>
@@ -349,7 +349,7 @@
       </div>
           <!-- 3 -->
       <div class="image">
-        <img src="image/fp/shoes.png" />
+        <img src="image/shoes.png" />
         <div class="image-type">
           <div class="type-new"><h1>NEW</h1></div>
         </div>
@@ -370,7 +370,7 @@
       </div>
           <!-- 4 -->
       <div class="image">
-        <img src="image/fp/carrybag.png" />
+        <img src="image/carrybag.png" />
         <div class="image-type">
           <div class="type-sale"><h1>SALE</h1></div>
         </div>
@@ -507,9 +507,9 @@
           <h6>Mabour, Aus</h6>
             <div class="customer_image">
             <div>
-            <img src="image/cus/small face 1.png">
-            <img src="image/cus/cus-review-pic.png">
-            <img src="image/cus/small face 2.png">
+            <img src="image/small face 1.png">
+            <img src="image/cus-review-pic.png">
+            <img src="image/small face 2.png">
             </div>
          </div>
          </div>
@@ -538,10 +538,10 @@
           <div class="line"></div>
         </div>
         <div class="our_partner-image">
-          <img src="image/New folder/auburn.png" alt="">
-          <img src="image/New folder/howard.png" alt="">
-          <img src="image/New folder/marquette.png" alt="">
-          <img src="image/New folder/auburn.png" alt="">
+          <img src="image/auburn.png" alt="">
+          <img src="image/howard.png" alt="">
+          <img src="image/marquette.png" alt="">
+          <img src="image/auburn.png" alt="">
         </div>
       </div>
     </div>
@@ -554,21 +554,21 @@
           </div>
           <div class="latest_news_cards-container">
         <div class="latest_news-cards">
-          <img src="image/latestnews/img1.png" alt="">
+          <img src="image/img1.png" alt="">
           <h5>Lorem ipsum dolor sit amet consectetur, adipisicing elit.optio! Voluptatibus.</h5>
           <div class="line"></div>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nulla ipsam sunt pariatur similique illum id aspernatur ad commodi ipsum quis at, accusantium</p>
           <button>Read More</button>
         </div>
         <div class="latest_news-cards">
-          <img src="image/latestnews/img2.png" alt="">
+          <img src="image/img2.png" alt="">
           <h5>Lorem ipsum dolor sit amet consectetur, adipisicing elit.optio! Voluptatibus.</h5>
           <div class="line"></div>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nulla ipsam sunt pariatur similique illum id aspernatur ad commodi ipsum quis at, accusantium</p>
           <button>Read More</button>
         </div>
         <div class="latest_news-cards">
-          <img src="image/latestnews/img3.png" alt="">
+          <img src="image/img3.png" alt="">
            <h5>Lorem ipsum dolor sit amet consectetur, adipisicing elit.optio! Voluptatibus.</h5>
           <div class="line"></div>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nulla ipsam sunt pariatur similique illum id aspernatur ad commodi ipsum quis at, accusantium</p>
