--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MART</title>
-    <link rel="stylesheet" href="css/Mart.css" />
+    <link rel="stylesheet" href="Mart.css" />
     <link rel="stylesheet" href="fontawesome-free-7.0.0-web/css/all.min.css" />
     <link
       rel="stylesheet"
