--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     
           <!-- 2 -->
       <div class="image">
-        <img src="mage/heels.png" />
+        <img src="image/heels.png" />
         <div class="image-type">
           <div class="type-new"><h1>NEW</h1></div>
           <div class="type-sale"><h1>SALE</h1></div>
