--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
           <div class="line"></div>
             </div>
         <div class="customer-avatar">
-        <img src="image/cus/cus-review-pic.png">  
+        <img src="image/cus-review-pic.png">  
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, aspernatur? Animi laborum excepturi tenetur, eaque impedit et praesentium vel numquam ipsum nihil autem, temporibus, odit sapiente mollitia dolorem est quod molestiae. Maiores exercitationem quibusdam quis officia. Ipsa voluptatum ut accusantium officiis labore ad, nesciunt doloremque eaque sunt dignissimos, odit a.</p>
         <h4>-<span>Olivia</span>-
